adding new function and edits to the html ;

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,8 +16,8 @@
   <header>
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Welcome to Gov Glance API</h1>
-          <p class="col-md-8 fs-4">Government News and Data at a Glance!<br>Gov Glance API an aggregate of government news and data!</p>
+          <h1 class="display-5 fw-bold">Welcome to News Sources' API</h1>
+          <p class="col-md-8 fs-4">Political News with Sources!<br>News Source API is a tool to look at Political news its repsective data!</p>
         </div>
         <a href='/docs'>
         <button type="button" class="btn btn-primary">
